chore: add precommit hook and fix eslint script

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint:js": "eslint",
+    "lint:js": "eslint .",
     "lint:fix": "eslint . --fix",
-    "lint:css": "stylelint './static/**/*.js' './pages/**/*.js' './utils/**/*.js' './components/**/*.js'"
+    "lint:css": "stylelint './static/**/*.js' './pages/**/*.js' './utils/**/*.js' './components/**/*.js'",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "eslint": "^4.6.1",
