--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,10 +1,7 @@
 {
   "reporter": "stylint-stylish",
   "processors": ["stylelint-processor-styled-components"],
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-styled-components"
-  ],
+  "extends": "stylelint-config-standard",
   "syntax": "scss",
   "rules": {
     "declaration-empty-line-before": null,
