--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,6 +6,7 @@
   "rules": {
     "declaration-empty-line-before": null,
     "selector-type-case": null,
-    "selector-type-no-unknown": null
+    "selector-type-no-unknown": null,
+    "selector-pseudo-element-colon-notation": "single"
   }
 }
