--- a/package.json
+++ b/package.json
@@ -15,15 +15,11 @@
     "next": "^3.2.2",
     "polished": "^1.7.0",
     "prettier": "^1.7.0",
-    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "styled-components": "^2.1.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.6",
-    "@storybook/addon-links": "^3.2.6",
-    "@storybook/react": "^3.2.8",
     "babel-eslint": "^8.0.0",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-polished": "^1.1.0",
@@ -37,7 +33,10 @@
     "stylelint-config-standard": "^17.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^0.4.0",
-    "stylint-stylish": "^1.4.0"
+    "stylint-stylish": "^1.4.0",
+    "@storybook/react": "^3.2.8",
+    "@storybook/addon-actions": "^3.2.6",
+    "@storybook/addon-links": "^3.2.6"
   },
   "lint-staged": {
     "*.js": [
