chore: change static directory

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "storybook": "start-storybook -s ./static -p 6006",
+    "storybook": "start-storybook -s ./ -p 6006",
     "build-storybook": "build-storybook",
     "lint:js": "eslint .",
     "lint:fix": "eslint . --fix",
