--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "draft-js": "^0.10.2",
     "eslint": "^4.6.1",
     "next": "^3.2.2",
     "polished": "^1.7.0",
@@ -18,6 +19,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "sanitize-html": "^1.14.1",
     "styled-components": "^2.1.2"
   },
   "devDependencies": {
