--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "apollo-client": "^1.9.3",
+    "auth0-lock": "^10.21.1",
     "draft-js": "^0.10.2",
     "eslint": "^4.6.1",
     "next": "^3.2.2",
@@ -18,6 +20,7 @@
     "prettier": "^1.7.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-apollo": "^1.4.15",
     "react-dom": "^15.6.1",
     "sanitize-html": "^1.14.1",
     "styled-components": "^2.1.2"
