feat: add auth, page header, pwa support

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,13 +1,26 @@
 {
   "name": "Just One Rocks",
+  "short_name": "Just One Rocks",
   "icons": [
     {
       "src": "/static/icons/apple-touch-icon.png",
       "sizes": "180x180",
       "type": "image/png"
+    },
+    {
+      "src": "/static/icons/pwa-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/icons/pwa-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
-  "theme_color": "#FEA600",
-  "background_color": "#ffffff",
-  "display": "standalone"
+  "theme_color": "#f8239b",
+  "background_color": "#fefefe",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/"
 }
