--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "sanitize-html": "^1.14.1",
-    "styled-components": "^2.1.2"
+    "styled-components": "^2.1.2",
+    "styled-media-query": "^2.0.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.6",
