--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-dom": "^15.6.1",
     "sanitize-html": "^1.14.1",
     "styled-components": "^2.1.2",
-    "styled-media-query": "^2.0.1"
+    "styled-media-query": "^2.0.1",
     "subscriptions-transport-ws": "0.8.3",
     "sw-precache-webpack-plugin": "^0.11.4",
     "ws": "^3.2.0"
